service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argotest2
  namespace: argotest2
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: argotest2
